fix fullscreen on tablets

--- a/style.uncompressed.css
+++ b/style.uncompressed.css
@@ -352,11 +352,11 @@ footer #copyright {float: left; bpadding: 10px 30px 0 0;}
   margin-bottom: 10px;
 }
 
-#map_canvas { width:100%; height: 100%; position: absolute; top:0; right: 0; left: 0; bottom: 0;}
+#map_canvas { width:100%; height: 100%; position: relative; top:0; right: 0; left: 0; bottom: 0;}
 #gmnoprint {width: auto;}
 #map-container {
   height: 100%;
-  position: fixed;
+  position: absolute;
   top:0;
   left: 0;
   right: 0;
